fix(ui): address layout bugs
- change navbar position to sticky, so it will always fill viewports high
- adjust main content container paddings

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -7,6 +7,8 @@
   flex: 0 0 auto;
   transition: width 0.5s ease;
   border-radius: 0 var(--mantine-radius-lg) var(--mantine-radius-lg) 0;
+  position: sticky;
+  top: 0;
 }
 
 .navbar-collapsed {
